test/sema/methods/method_using_parent_template_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S<T> {
  // CHECK: [[# @LINE + 1 ]]:10: error: declaring 'T' shadows outer type parameter
  fn foo<T>(self: Self) {}
}

fn main() {}
